vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "blog-infra-vpc-main"
  }
}

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id

  availability_zone = var.aws_subnet_public.subnet_1a.availability_zone
  cidr_block        = var.aws_subnet_public.subnet_1a.cidr_block

  map_public_ip_on_launch = true

  tags = {
    Name = var.aws_subnet_public.subnet_1a.name
  }
}

resource "aws_subnet" "public_dummy" {
  vpc_id = aws_vpc.main.id

  availability_zone = var.aws_subnet_public_dummy.subnet_1c.availability_zone
  cidr_block        = var.aws_subnet_public_dummy.subnet_1c.cidr_block

  map_public_ip_on_launch = true

  tags = {
    Name = var.aws_subnet_public_dummy.subnet_1c.name
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "blog-infra-igw-main"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "blog-infra-rt-public"
  }
}

resource "aws_route" "igw" {
  destination_cidr_block = "0.0.0.0/0"
  route_table_id         = aws_route_table.public.id
  gateway_id             = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_security_group" "instance-main" {
  vpc_id = aws_vpc.main.id
  name   = "blog-infra-instance-main-sg"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
